modules/security/main.tf
# -----------------------------------------------------------------------------
# Security Groups
# -----------------------------------------------------------------------------

# Create Internet ALB Security Group
resource "aws_security_group" "internet_alb" {
  name   = "${var.prefix}-internet-alb-sg"
  vpc_id = var.internet_vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.prefix}-internet-alb-sg"
    Environment = var.environment
  }
}

# Create Workload ALB Security Group
resource "aws_security_group" "workload_alb" {
  name   = "${var.prefix}-workload-alb-sg"
  vpc_id = var.workload_vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.internet_cidr, var.workload_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.prefix}-workload-alb-sg"
    Environment = var.environment
  }
}

# Create ECS Security Group
resource "aws_security_group" "ecs" {
  name   = "${var.prefix}-ecs-sg"
  vpc_id = var.workload_vpc_id

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.workload_alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.prefix}-ecs-sg"
    Environment = var.environment
  }
}

# Create Aurora Security Group
resource "aws_security_group" "aurora" {
  name   = "${var.prefix}-aurora-sg"
  vpc_id = var.workload_vpc_id

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name        = "${var.prefix}-aurora-sg"
    Environment = var.environment
  }
}
